--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Phinditforme: Using cell phones to connect people with their neighborhoods</title>
-</head>
-<body>
-<h2>Using cell phones to connect people with their neighborhoods</h2>
-<p>Phinditforme is currently being rewritten. Better, stronger, faster. Soon...</p>
-</body>
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <style type="text/css">
+      html { height: 100% }
+      body { height: 100%; margin: 0; padding: 0 }
+      #map { height: 100%; width: 100%; }
+      .search { padding: 10px; background-color: #C0C0C0; border: 1px #000000 dashed }
+      .search input { padding: 2px; }
+      .icon img { float: left; padding: 3px; margin-right: 5px;}
+    </style>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/places.js"></script>
+    <script type="text/javascript" src="js/finditforme.js"></script>
+  </head>
+  <body >
+    <div id="map"></div>
+  </body>
 </html>
