--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/places.js"></script>
     <script type="text/javascript" src="js/finditforme.js"></script>
   </head>
