--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
       #map { height: 100%; width: 100%; }
-      .search { padding: 10px; background-color: #C0C0C0; border: 1px #000000 dashed }
-      .search input { padding: 2px; }
-      .icon img { float: left; padding: 3px; margin-right: 5px;}
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
@@ -18,6 +15,26 @@
     <script type="text/javascript" src="js/finditforme.js"></script>
   </head>
   <body >
-    <div id="map"></div>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Phind It For Me</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="map">
+    </div>
   </body>
 </html>
