--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
+          <div class="alert alert-info" id="banner">Select a location type.</div>
         </div>
       </div>
     </div>
