--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <title>Phind it For Me!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
       #map { height: 100%; width: 100%; }
+      #map img {
+          max-width: none; // Fix for bootstrap related CSS weirdness in GMaps.
+        }
+      #search {
+          border: 1px black solid;
+      }
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/places.js"></script>
-    <script type="text/javascript" src="js/finditforme.js"></script>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
   </head>
   <body >
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -31,11 +35,15 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
-          <div class="alert alert-info" id="banner">Select a location type.</div>
         </div>
+        <div class="alert alert-info" id="banner">Choose a location type below.</div>
       </div>
     </div>
-    <div class="container" id="map">
-    </div>
+    <div class="container" id="map"></div>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/places.js"></script>
+    <script type="text/javascript" src="js/finditforme.js"></script>
   </body>
 </html>
