--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
       html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
+      body { height: 100%; margin: 0px; padding: 0px; }
       #map { height: 100%; width: 100%; }
       #map img {
           max-width: none; // Fix for bootstrap related CSS weirdness in GMaps.
         }
+      #map {
+        padding: 5px;
+      }
       #search {
           border: 1px black solid;
       }
