--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="shortcut icon" href="img/favicon.ico">
   </head>
   <body >
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -36,6 +37,7 @@
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="https://github.com/mheadd/finditforme">Fork Code</a></li>
             </ul>
           </div>
         </div>
