--- a/index.html
+++ b/index.html
@@ -13,14 +13,33 @@
         }
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/places.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        
+        // Set up typeahead data on the search field.
+        $('#searchField').typeahead({
+          source: function getPlaceTypes() {
+            places = [];
+            for (item in placeTypes) {
+              var place = item.replace(/"_"/g, " ");
+              places.push(place)
+            }
+            console.log(places.length);
+            return places;
+          }
+        });
+
+      });
+    </script>
   </head>
   <body>
     <div id="top-menu" class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
       <div class="container">
         <form class="navbar-search form-inline" onsubmit="doNothing()">
-          <input type="text" id="searchField" class="input-large search-query" data-provide="typeahead" data-source='["Libraries", "Stores", "Accounting", "Airport", "Amusement Park", "Aquarium", "Art Gallery", "ATM", "Bakery", "Bank", "Bar", "Beauty Salon", "Bicycle Store", "Book Store", "Bowling Alley", "Bus Station", "Cafe", "Campground", "Car Dealer", "Car Rental", "Car Repair", "Car Wash", "Casino", "Cemetary", "Church", "City Hall", "Clothing Store", "Convenience Store", "Courthouse", "Dentist", "Department Store", "Doctor", "Electrician", "Electronics Store", "Embassy", "Establishment", "Finance", "Fire Station", "Florist", "Food", "Funeral Home", "Furniture Store", "Gas Station", "General Contractor", "Grocery Store", "Supermarket", "Gym", "Hair care", "Hardware store", "Health", "Hindu Temple", "Home Goods Store", "Hospital", "Insurance Agency", "Jewelry Store", "Laundry", "Lawyer", "Library", "Liquor Store", "Local Government Office", "Locksmith", "Lodging", "Meal Delivery", "Meal Takeaway", "Mosque", "Moveie Rental", "Movie Theater", "Moving Company", "Museum", "Night Club", "Painter", "Parl", "Parking", "Pet Store", "Pharmacy", "Physiotherapist", "Place of Worship", "Plumber", "Police", "Post Office", "Real Estate Agency", "Restaurant", "Roofing Contractor", "RV Park", "School", "Shoe Store", "Shopping Mall", "Spa", "Stadium", "Storage", "Store", "Subway station", "Synagogue", "Taxi Stand", "Train Station", "Travel Agency", "University", "Veterinary Care", "Zoo"]' placeholder="Search for places" onchange="doSearch()">
+          <input type="text" id="searchField" class="input-large search-query" placeholder="Search for places" onchange="doSearch()">
         </form>
       </div>
     </div>
@@ -48,7 +67,6 @@
     </div>
     <div class="container" id="map"></div>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/messages.js"></script>
     <script type="text/javascript" src="js/finditforme.js"></script>
